--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
   height: 100%;
   margin: 0;
 }
+.main {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
 textarea {
   padding: 0;
   border: none;
@@ -17,6 +22,13 @@ textarea {
   overflow: hidden;
   text-align: right;
 }
+.lines div {
+  padding-right: 5px;
+  color: gray;
+}
+.linedtextarea {
+  flex: 1 1 auto;
+}
 #code {
   width: 100%;
   height: 100%;
@@ -26,16 +38,12 @@ textarea {
   font-family: "Courier New", Courier, monospace;
   font-size: 11pt;
 }
-.lines div {
-  padding-right: 5px;
-  color: gray;
-}
-#output {
-  width: 100%;
-  height: 200px;
-}
 .h-divider {
   width: 100%;
   height: 1px;
   background: lightgray;
+}
+#output {
+  width: 100%;
+  height: 250px;
 }
