--- a/style.css
+++ b/style.css
@@ -11,12 +11,6 @@ body {
   flex-flow: column;
   height: 100%;
 }
-textarea {
-  padding: 0;
-  border: none;
-  outline: none;
-  resize: none;
-}
 .lines {
   float: left;
   overflow: hidden;
@@ -32,7 +26,11 @@ textarea {
 #code {
   width: 100%;
   height: 100%;
+  padding: 0;
   float: right;
+  border: none;
+  outline: none;
+  resize: none;
 }
 #code, #output, .lines {
   font-family: "Courier New", Courier, monospace;
@@ -43,7 +41,9 @@ textarea {
   height: 1px;
   background: lightgray;
 }
-#output {
+.footer {
   width: 100%;
   height: 250px;
+  margin: 0;
+  padding: 8px;
 }
