--- a/style.css
+++ b/style.css
@@ -6,10 +6,19 @@ body {
   height: 100%;
   margin: 0;
 }
+button {
+  padding: 8px;
+  font-size: 11pt;
+}
 .main {
   display: flex;
   flex-flow: column;
   height: 100%;
+}
+.header {
+  width: 100%;
+  padding: 8px;
+  background: peachpuff;
 }
 .lines {
   float: left;
@@ -17,20 +26,21 @@ body {
   text-align: right;
 }
 .lines div {
-  padding-right: 5px;
-  color: gray;
+  padding-right: 8px;
 }
 .linedtextarea {
   flex: 1 1 auto;
+  background: lightgoldenrodyellow;
 }
 #code {
   width: 100%;
   height: 100%;
   padding: 0;
-  float: right;
-  border: none;
   outline: none;
   resize: none;
+  float: right;
+  border: none;
+  background: inherit;
 }
 #code, #output, .lines {
   font-family: "Courier New", Courier, monospace;
@@ -38,10 +48,10 @@ body {
 }
 .h-divider {
   width: 100%;
-  height: 1px;
+  height: 2px;
   background: lightgray;
 }
-.footer {
+.console {
   width: 100%;
   height: 250px;
   margin: 0;
