--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ button {
   padding-right: 8px;
 }
 .linedtextarea {
+  padding-top: 8px;
   flex: 1 1 auto;
   background: lightgoldenrodyellow;
 }
