--- a/style.css
+++ b/style.css
@@ -16,51 +16,21 @@ button {
   height: 100%;
 }
 .header {
-  width: 100%;
   padding: 8px;
   background: peachpuff;
 }
 #share-link {
   display: none;
 }
-.lines {
-  float: left;
-  overflow: hidden;
-  text-align: right;
-  color: #a9a9a9;
-}
-.lines div {
-  padding-right: 8px;
-}
-.linedtextarea {
-  padding-top: 8px;
-  flex: 1 1 auto;
+.CodeMirror {
+  height: 100%;
   background: lightgoldenrodyellow;
 }
-#code {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  outline: none;
-  resize: none;
-  float: right;
-  border: none;
-  background: inherit;
-}
-#code, #output, .lines {
-  font-family: "Courier New", Courier, monospace;
-  font-size: 11pt;
-}
-.h-divider {
-  width: 100%;
-  height: 2px;
-  background: lightgray;
-}
 .console {
-  width: 100%;
   height: 300px;
   margin: 0;
   padding: 8px;
+  border-top: 1px solid #ddd;
 }
 .error {
   color: red;
